fixed how page looks on mobile

--- a/main.css
+++ b/main.css
@@ -16,29 +16,31 @@
 }
 
 #scarecrow {
-    width: 40%;
+    max-width: 40%;
+    margin: 0 7vw;
 }
 
 img {
+    object-fit: scale-down;
     width: 100%;
+    height: 100%;
 }
 
 #message {
-    width: 45%;
+    
     display: flex;
     flex-flow: column nowrap;
     justify-content: space-between;
 }
 
 #title {
-    font-size: 4rem;
+    font-size: 6vw;
     font-weight: 700;
     color: #333333;
 }
 
 #msg {
     font-size: 1rem;
-    width: 50%;
     color: #4F4F4F;
 }
 
@@ -63,7 +65,7 @@ img {
 #errMsg {
     padding: 5px 20px;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 650px) {
     #main {
         flex-direction: column;
         justify-content: stretch;
@@ -73,7 +75,7 @@ img {
     }
 
     #scarecrow {
-        width: 90%;
+        width: 50%;
     }
 
     #message {
